--- a/style.css
+++ b/style.css
@@ -11,6 +11,48 @@
     box-sizing: 0;
     font-family: 'Ubuntu', sans-serif;
 }
+.div-help{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+}
+.div-help h3{
+    font-size: 13px;
+}
+.section-space{
+    height: 10vh;
+}
+.support{
+    margin-top: 3px;
+    width: 70px;
+    height: 70px;
+    background-color: rgb(189, 93, 93);
+    border-radius: 40%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: rgba(219, 218, 218, 0.171);
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.support:hover{
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.1);
+}
+.support p{
+    margin-top: 10px;
+    font-size: 10px;
+    font-weight: 500;
+}
+.support img{
+    width: 50px;
+    height: auto;
+}
+/* <-------------- header --------> */
 header{
     background-color: var(--white);
     width: 100vw;
@@ -35,7 +77,7 @@ nav{
     border-bottom: 1px solid #0095af;
 }
 .btn-primary{
-    width: 110px;
+    width: 140px;
     height: 33px;
     border: none;
     background: linear-gradient(135deg, #00bcdd, #ff00ff);
@@ -53,35 +95,49 @@ nav{
     box-shadow: 0 5px 15px var(--yellow-light);
     color: var(--white);
 }
+nav input{
+    width: 190px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #00bcdd;
+    color: #000;
+}
+nav input:active{
+    border: 1px solid #00bcdd;
+    color: #000;
+}
+nav input::placeholder{
+    padding-left: 5px;
+}
 .logo{
     width: 150px;
     margin-left: 50px;
     padding-top: 25px;
     cursor: pointer;
     font-size: 30px;
-    background: -webkit-linear-gradient(135deg, #00bcdd, #ff00ff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
 .header-elements{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 3vh;
 }
 .header-left{
     display: flex;
     flex-direction: column;
     color: var(--black);
-    margin-left: 100px;
+    margin-left: 80px;
     width: 50vw;
     margin-top: 15vh;
+}
+.header-right{
+    width: 50vw;
 }
 .header-right img{
     width: 500px;
     float: right;
-    margin-right: 100px;
+    margin-right: 80px;
     margin-top: 0;
     border-radius: 5px;
 }
@@ -90,7 +146,7 @@ nav{
     font-size: 55px;
     font-weight: 600;
     letter-spacing: 3px;
-    margin-top: -50px;
+    margin-top: -7vh;
 }
 .header-left p{
     font-size: 20px;
@@ -106,7 +162,7 @@ nav{
     background-color: #32c6f3c5;
     box-shadow:20px 20px 100px 100px #32c6f3c5;
     opacity: 0.2;
-    position: fixed;
+    position: absolute;
     top: 200px;
     left: -30px;
 }
@@ -117,7 +173,7 @@ nav{
     background-color: #44ff98a1;
     box-shadow:10px 10px 100px 100px #44ff98a1;
     opacity: 0.3;
-    position: fixed;
+    position: absolute;
     bottom: 300px;
     right: 600px;
 }
@@ -128,7 +184,7 @@ nav{
     background-color: #44ffffa1;
     box-shadow:10px 10px 100px 100px #44ffffa1;
     opacity: 0.3;
-    position: fixed;
+    position: absolute;
     top: 100px;
     right: 10px;
 }
@@ -146,7 +202,7 @@ nav{
     background: linear-gradient(135deg, #00bcdd, #ff00ff);
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 30px;
+    margin-top: 3vh;
 }
 .btn-git:hover{
     transition: all 0.2s ease-in-out;
@@ -173,91 +229,377 @@ nav{
 .div-stat{
     display: flex;
     flex-direction: column;
-    margin-top: 150px;
-}
-.div-stat h2{
-    font-size: 24px;
-    background: -webkit-linear-gradient(135deg, #00bcdd, #ff00ff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    margin-top: 16vh;
 }
 .stats{
     display: flex;
     flex-direction: row;
     margin-left: -10px;
-    margin-top: 20px;
-}
-.stats img{
-    width: 40px;
-    height: 40px;
 }
 .stat{
-    width: 50px;
-    height: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    height: 130px;
+    margin: 15px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     backdrop-filter: blur(10px) saturate(180%);
     -webkit-backdrop-filter: blur(10px) saturate(180%);
-    background-color: rgba(255, 255, 255, 0.33);
-    border-radius: 12px;
+    background-color: #e3e3e355;
+    background: linear-gradient(45deg, #e3e3e355, #e3e3e355, #47dae255);
+    border-radius: 10px;
     border: 1px solid rgba(209, 213, 219, 0.3);
-    margin-right: 10px;
-    margin-left: 10px;
 }
 .stat:hover{
     transition: all 0.2s ease-in-out;
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
-.stats img{
-    width: 45px;
-    height: 45px;
-    padding: 2.5px;
+.stat img{
+    width: 50px;
+    height: 50px;
 }
+.stat h1{
+    font-size: 25px;
+    margin-top: 5px;
+    width: 140px;
+}
+.stat h3{
+    font-size: 14px;
+    margin-top: 3px;
+    width: 150px;
+}
+
 /* <------ courses ------------> */
 .section-courses{
-    background-color: var(--white);
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+.section-courses h2{
+    font-size: 36px;
+}
+.div-courses{
+    display: flex;
+    flex-direction: row;
+}
+.course-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.course-group h3{
+    font-size: 25px;
+}
+.course-group p{
+    font-size: 18px;
+    margin-top: 10px;
 }
 .courses{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    flex-direction: column;
+    background-color: #fff;
+    width: 35vw;
+    height: 79vh;
+    margin-top: 40px;
+    padding: 10px;
+    border-radius: 15px;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: #e3e3e355;
+    border: 1px solid rgba(209, 213, 219, 0.3);
 }
 .course{
-    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    margin: 2.1vh 3vh;
+    position: relative;
+    height: 19vh;
+    border-radius: 12px;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: #e3e3e355;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    cursor: pointer;
 }
-.course-group{
-    width: 20vw;
+.course img{
+    height: 19vh;
+    border-radius: 12px;
+}
+.course-text{
+    margin-left: 15px;
+}
+.course-text h4{
+    font-size: 20px;
+    margin-top: 5px;
+}
+.course-text p{
+    font-size: 20px;
+    margin-top: 5px;
+}
+.course-text h5{
+    font-size: 24px;
+    position: absolute;
+    bottom: 2px;
+}
+/* <---- not active ---> */
+.course-group-ia{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.course-group-ia h3{
+    font-size: 20px;
+}
+.course-group-ia p{
+    font-size: 16px;
+    margin-top: 10px;
+}
+.courses-ia{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: 29vw;
+    height: 74vh;
+    margin-top: 40px;
+    padding: 10px;
+    border-radius: 15px;
+    align-self: center;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: #e3e3e355;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.course-ia{
+    display: flex;
+    flex-direction: row;
+    margin: 2vh 2.5vh;
+    position: relative;
+    height: 17vh;
+    border-radius: 12px;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: #e3e3e355;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.course-ia img{
+    height: 17vh;
+    border-radius: 10px;
+}
+.course-text-ia{
+    margin-left: 15px;
+}
+.course-text-ia h4{
+    font-size: 16px;
+    margin-top: 5px;
+}
+.course-text-ia p{
+    font-size: 14px;
+    margin-top: 5px;
+}
+.course-text-ia h5{
+    font-size: 20px;
+    position: absolute;
+    bottom: 2px;
+}
+#course-ia-left{
+    margin-right: -2.5vw;
+}
+#course-ia-right{
+    margin-left: -2.5vw;
+    z-index: -1;
+}
+.courses:hover{
+    transform: scale(1.05);
+}
+.course-arrow{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #5eb9e7da;
+    align-self: center;
+    cursor: pointer;
+    z-index: 5;
+}
+.course-arrow img{
+    width: 30px;
+    align-self: center;
+}
+#left-arrow{
+    margin-right: -1vw;
+}
+#right-arrow{
+    margin-left: -1vw;
 }
 /* <------- achievements ---------> */
 .acheivements{
-    background-color: var(--white);
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .placements{
     margin: 0px 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.acheivements h2{
+    font-size: 36px;
 }
 .place-companies{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
 .place-company{
-    width: 200px;
-    height: 75px;
+    width: 13vw;
+    height: 8vh;
     background-color: grey;
-    margin: 10px;;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: #dbdada2c;
+    border-radius: 12px;
+    border: 1px solid #d1d5db4d;
 }
 .place-companies img{
-    width: 150px;
+    width: 10vw;
+    padding: 10px 0px;
 }
+.place-company:hover{
+    transition: all 0.1s ease-in-out;
+    transform: scale(1.1);
+    background: linear-gradient(45deg,#dbdada2c, #26acea2c, #dbdada2c);
+}
+.div-institutions{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 70px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.institutions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 15px;
+}
+.institution{
+    width: 13vw;
+    height: 11vh;
+    margin: 15px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: rgba(219, 218, 218, 0.171);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+.institution img{
+    height: 9vh;
+    margin-top: 1vh;
+}
+.institution:hover{
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.1);
+    background: linear-gradient(45deg,#dbdada2c, #692fdd62, #dbdada2c);
+}
+
+/* <-------- team ineuron ----------> */
+.team-fame{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.team-neuron{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 70px;
+    align-items: center;
+}
+.team-intro h2{
+    font-size: 36px;
+}
+.teams{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+.team-row{
+    display: flex;
+    flex-direction: row;
+}
+.team{
+    display: flex;
+    flex-direction: row;
+    width: 20vw;
+    height: 18vh;
+    margin: 2vh 2vw;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    backdrop-filter: blur(10px) saturate(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(180%);
+    background-color: rgba(219, 218, 218, 0.171);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+    position: relative;
+}
+.team:hover{
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.1);
+    background: linear-gradient(45deg,#dbdada2c, #692fdd62, #dbdada2c);
+}
+.team-img img{
+    height: 18vh;
+    margin-left: -5px;
+}
+.team-text{
+    margin-left: 5px;
+}
+.team-text h3{
+    font-size: 22px;
+}
+.team-text h4{
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 10px;
+}
+.social{
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
+.social div{
+    margin-right: 8px;
+    cursor: pointer;
+}
+.social img{
+    width: 20px;
+}
+/* <------------- hall of fame ------------> */
 .hall-of-fame{
     display: flex;
     flex-direction: column;
@@ -265,14 +607,4 @@ nav{
 .halls{
     display: flex;
     flex-direction: row;
-}
-/* <-------- team ineuron ----------> */
-.team-ineuron{
-    background-color: var(--white);
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    position: relative;
 }
