--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@
     backdrop-filter: blur(10px) saturate(180%);
     -webkit-backdrop-filter: blur(10px) saturate(180%);
     background-color: rgba(219, 218, 218, 0.171);
+    background: linear-gradient(45deg, #e26e4755, #e3e3e355, #e26e4755);
     border: 1px solid rgba(209, 213, 219, 0.3);
+    cursor: pointer;
 }
 .support:hover{
     transition: all 0.2s ease-in-out;
@@ -67,6 +69,7 @@ nav{
     cursor: pointer;
     color: #000;
     margin-left: 20px;
+    font-size: 17px;
     font-weight: 500;
     text-decoration: none;
 }
@@ -135,11 +138,15 @@ nav input::placeholder{
     width: 50vw;
 }
 .header-right img{
-    width: 500px;
+    width: 40vw;
     float: right;
     margin-right: 80px;
-    margin-top: 0;
+    margin-top: 20px;
     border-radius: 5px;
+}
+.header-right img:hover{
+    transition: all 0.2s ease-in-out;
+    transform: scale(1.01);
 }
 .header-left h1{
     width: 40vw;
@@ -162,7 +169,7 @@ nav input::placeholder{
     background-color: #32c6f3c5;
     box-shadow:20px 20px 100px 100px #32c6f3c5;
     opacity: 0.2;
-    position: absolute;
+    position: fixed;
     top: 200px;
     left: -30px;
 }
@@ -170,11 +177,11 @@ nav input::placeholder{
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    background-color: #44ff98a1;
-    box-shadow:10px 10px 100px 100px #44ff98a1;
+    background-color: #44ff9882;
+    box-shadow:10px 10px 100px 100px #44ff9882;
     opacity: 0.3;
-    position: absolute;
-    bottom: 300px;
+    position: fixed;
+    bottom: 200px;
     right: 600px;
 }
 .blur-aqua{
@@ -184,13 +191,9 @@ nav input::placeholder{
     background-color: #44ffffa1;
     box-shadow:10px 10px 100px 100px #44ffffa1;
     opacity: 0.3;
-    position: absolute;
+    position: fixed;
     top: 100px;
     right: 10px;
-}
-.blur-bg:hover{
-    transition: all 0.2s ease-in-out;
-    transform: scale(3);
 }
 .btn-git{
     display: flex;
@@ -247,7 +250,7 @@ nav input::placeholder{
     text-align: center;
     backdrop-filter: blur(10px) saturate(180%);
     -webkit-backdrop-filter: blur(10px) saturate(180%);
-    background-color: #e3e3e355;
+    /* background-color: #e3e3e355; */
     background: linear-gradient(45deg, #e3e3e355, #e3e3e355, #47dae255);
     border-radius: 10px;
     border: 1px solid rgba(209, 213, 219, 0.3);
@@ -422,10 +425,12 @@ nav input::placeholder{
 .courses:hover{
     transform: scale(1.05);
     transition: all 0.2s ease-in-out;
+    box-shadow: 0 0px 15px #04135ad7;
 }
 .course:hover{
     transform: scale(1.05);
     transition: all 0.2s ease-in-out;
+    box-shadow: 0 0px 15px #132371d7;
 }
 .course-arrow{
     width: 40px;
@@ -505,7 +510,8 @@ nav input::placeholder{
 .place-company:hover{
     transition: all 0.1s ease-in-out;
     transform: scale(1.1);
-    background: linear-gradient(45deg,#dbdada2c, #26acea2c, #dbdada2c);
+    /* background: linear-gradient(45deg,#dbdada2c, #26acea2c, #dbdada2c); */
+    box-shadow: 0 0px 15px #7b29e8d7;
 }
 .div-institutions{
     display: flex;
@@ -541,7 +547,8 @@ nav input::placeholder{
 .institution:hover{
     transition: all 0.2s ease-in-out;
     transform: scale(1.1);
-    background: linear-gradient(45deg,#dbdada2c, #692fdd62, #dbdada2c);
+    /* background: linear-gradient(45deg,#dbdada2c, #692fdd62, #dbdada2c); */
+    box-shadow: 0 0px 15px #00b7f9d7;
 }
 
 /* <-------- team ineuron ----------> */
@@ -582,7 +589,8 @@ nav input::placeholder{
     text-align: left;
     backdrop-filter: blur(10px) saturate(180%);
     -webkit-backdrop-filter: blur(10px) saturate(180%);
-    background-color: rgba(219, 218, 218, 0.171);
+    /* background-color: rgba(219, 218, 218, 0.171); */
+    background: linear-gradient(45deg, #e3e3e355, #e3e3e355, #47d0e255);
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
     position: relative;
@@ -653,7 +661,8 @@ nav input::placeholder{
 }
 .hall:hover{
     transition: all 0.2s ease-in-out;
-    transform: scale(1.1);
+    transform: scale(1.05);
+    box-shadow: 0 0px 15px #1663afd7;
 }
 .hall img{
     width: 20vw;
@@ -822,7 +831,7 @@ footer{
     flex-direction: row;
     margin-bottom: 0px;
     background-color: #63dafeac;
-    background: -webkit-linear-gradient(135deg, #0095afa0, #4500bbb7);
+    background: -webkit-linear-gradient(135deg, #2197aca5, #6434b799);
     align-content: center;
     align-items: center;
     justify-content: center;
@@ -886,7 +895,7 @@ footer{
     color: #000;
 }
 .footer-links p{
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 16px;
 }
 .footer-social .footer-links a{
@@ -911,4 +920,17 @@ footer{
 .footer-line{
     height: 1px;
     background: linear-gradient(135deg, #00bcdd6c, #6200ff88);
+}
+footer p{
+    font-size: 18px;
+    font-weight: 500;
+}
+/* <---- others ------> */
+#company-more{
+    width: 40px;
+}
+#college-more{
+width: 45px;
+height: auto;
+padding-top: 15px;
 }
